# nidus

./: .gitignore  .impeccable.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PRODUCT.md  README.md  SECURITY.md  deny.toml  osv-scanner.toml  rustfmt.toml
crates/cargo-nidus/: Cargo.toml
crates/cargo-nidus/src/: artifact_template.rs  check.rs  generate.rs  generate_name.rs  graph.rs  graph_metadata.rs  main.rs  openapi_doc.rs  route_order.rs  route_path.rs  routes.rs  schema.rs  source_files.rs  source_openapi.rs
crates/cargo-nidus/src/routes/: tests.rs
crates/cargo-nidus/tests/: cli.rs  cli_check.rs  cli_generate.rs  cli_generate_names.rs  cli_graph.rs  cli_new.rs  cli_openapi.rs  cli_openapi_errors.rs
crates/cargo-nidus/tests/support/: mod.rs
crates/nidus/: Cargo.toml
crates/nidus-auth/: Cargo.toml
crates/nidus-auth/src/: lib.rs  middleware.rs
crates/nidus-auth/tests/: guards.rs
crates/nidus-cache/: Cargo.toml
crates/nidus-cache/benches/: cache_hot_paths.rs
crates/nidus-cache/src/: lib.rs
crates/nidus-cache/tests/: module_metadata.rs  moka_cache.rs
crates/nidus-config/: Cargo.toml
crates/nidus-config/src/: error.rs  lib.rs  value.rs
crates/nidus-config/tests/: config.rs  env_paths.rs
crates/nidus-core/: Cargo.toml
crates/nidus-core/src/: lib.rs  resolution.rs
crates/nidus-core/src/app/: mod.rs
crates/nidus-core/src/container/: dependency.rs  mod.rs  request_scope.rs
crates/nidus-core/src/error/: mod.rs
crates/nidus-core/src/lifecycle/: mod.rs
crates/nidus-core/src/module/: graph.rs  mod.rs
crates/nidus-core/src/provider/: mod.rs
crates/nidus-core/tests/: app.rs  core_di.rs  lifecycle.rs  lifecycle_bootstrap.rs  module_graph.rs  module_graph_logging.rs  request_scope_di.rs
crates/nidus-dashboard/: Cargo.toml
crates/nidus-dashboard/assets/: app.js  index.html  styles.css
crates/nidus-dashboard/src/: auth.rs  collector.rs  config.rs  error.rs  lib.rs  router.rs  types.rs
crates/nidus-dashboard/src/storage/: memory.rs  mod.rs  sqlite.rs
crates/nidus-dashboard/tests/: auth.rs  builder.rs  capture.rs  router.rs  storage.rs  ui_assets.rs
crates/nidus-events/: Cargo.toml
crates/nidus-events/src/: lib.rs
crates/nidus-events/tests/: events.rs  observed_events.rs
crates/nidus-http/: Cargo.toml
crates/nidus-http/src/: context.rs  controller.rs  error.rs  health.rs  lib.rs  logging.rs  middleware.rs  otel.rs  request.rs  response.rs  router.rs  server.rs
crates/nidus-http/src/middleware/: api_defaults.rs  catch_panic.rs  metrics.rs  rate_limit.rs  request_context.rs  request_id.rs  request_scope.rs  security.rs
crates/nidus-http/src/router/: metadata.rs  path.rs
crates/nidus-http/tests/: error_response.rs  logging_otel_security.rs  middleware.rs  observability_middleware.rs  otel.rs  production_api.rs  request.rs  router.rs  server.rs
crates/nidus-integrations/: Cargo.toml
crates/nidus-integrations/src/: lib.rs
crates/nidus-integrations/tests/: envelope.rs  telemetry.rs
crates/nidus-jobs/: Cargo.toml
crates/nidus-jobs-sqlx/: Cargo.toml
crates/nidus-jobs-sqlx/src/: lib.rs
crates/nidus-jobs-sqlx/tests/: config.rs  live_services.rs  sqlite_store.rs
crates/nidus-jobs/src/: durable.rs  lib.rs
crates/nidus-jobs/tests/: durable.rs  jobs.rs  observed_jobs.rs
crates/nidus-kafka/: Cargo.toml
crates/nidus-kafka/src/: lib.rs
crates/nidus-kafka/tests/: config.rs  live.rs
crates/nidus-macros/: Cargo.toml
crates/nidus-macros/src/: controller.rs  diagnostics.rs  entrypoint.rs  guard.rs  injectable.rs  lib.rs  module.rs  pipe.rs  routes.rs  routes_metadata.rs  routes_openapi.rs  utils.rs
crates/nidus-macros/src/snapshots/: nidus_macros__module__tests__snapshots_module_expansion_with_attribute_and_field_metadata.snap
crates/nidus-nats/: Cargo.toml
crates/nidus-nats/src/: lib.rs
crates/nidus-nats/tests/: config.rs  live.rs
crates/nidus-observability/: Cargo.toml
crates/nidus-observability/src/: lib.rs
crates/nidus-observability/tests/: observability.rs
crates/nidus-openapi/: Cargo.toml
crates/nidus-openapi/src/: document.rs  html.rs  lib.rs  path.rs  route.rs
crates/nidus-openapi/tests/: openapi.rs  route_metadata.rs
crates/nidus-opentelemetry/: Cargo.toml
crates/nidus-opentelemetry/src/: lib.rs
crates/nidus-opentelemetry/tests/: pipeline.rs
crates/nidus-rabbitmq/: Cargo.toml
crates/nidus-rabbitmq/src/: lib.rs
crates/nidus-rabbitmq/tests/: config.rs  live.rs
crates/nidus-redis/: Cargo.toml
crates/nidus-redis/src/: lib.rs
crates/nidus-redis/tests/: config.rs  failure.rs  live.rs
crates/nidus-sentry/: Cargo.toml
crates/nidus-sentry/src/: lib.rs
crates/nidus-sentry/tests/: config.rs  tower.rs
crates/nidus-sqlx/: Cargo.toml
crates/nidus-sqlx/src/: lib.rs
crates/nidus-sqlx/tests/: cockroach_config.rs  live_services.rs  mysql_metadata.rs  postgres_metadata.rs  sqlite_adapter.rs  sqlx_ui.rs
crates/nidus-sqlx/tests/ui/: sqlx_provider_typed_registration.rs  sqlx_provider_typed_registration.stderr
crates/nidus-sqs/: Cargo.toml
crates/nidus-sqs/src/: lib.rs
crates/nidus-sqs/tests/: config.rs  live.rs
crates/nidus-testing/: Cargo.toml
crates/nidus-testing/src/: app.rs  lib.rs  request.rs  response.rs
crates/nidus-testing/tests/: config_overrides.rs  http_testing.rs  lifecycle_hooks.rs  provider_overrides.rs  request_builder.rs  request_scope.rs
crates/nidus-validation/: Cargo.toml
crates/nidus-validation/src/: lib.rs
crates/nidus-validation/tests/: validation.rs
crates/nidus/src/: app.rs  lib.rs  prelude.rs
crates/nidus/tests/: app_builder.rs  controller_metadata.rs  controller_routes.rs  dashboard_features.rs  facade_features.rs  macro_ui.rs
docs/: cache.md  (+46 more)
examples/auth-api/: Cargo.toml
examples/auth-api/src/: main.rs
examples/dashboard-api/: Cargo.toml  README.md
examples/dashboard-api/src/: main.rs
examples/external-commerce/: Cargo.toml  README.md
examples/external-commerce/src/: main.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: config_env.rs  openapi_paths.rs  route_paths.rs
(+588 files in other folders)
