[workspace]
members = [
  ".",
  "crates/nidus",
  "crates/nidus-core",
  "crates/nidus-http",
  "crates/nidus-macros",
  "crates/nidus-config",
  "crates/nidus-openapi",
  "crates/nidus-validation",
  "crates/nidus-auth",
  "crates/nidus-events",
  "crates/nidus-jobs",
  "crates/nidus-testing",
  "crates/cargo-nidus",
  "examples/hello-world",
  "examples/rest-api",
  "examples/auth-api",
  "examples/sqlx-postgres",
  "examples/openapi",
  "examples/background-jobs",
  "examples/modular-monolith",
]
resolver = "2"

[package]
name = "nidus-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bench]]
name = "routing"
path = "benches/routing.rs"
harness = false

[[bench]]
name = "dependency_resolution"
path = "benches/dependency_resolution.rs"
harness = false

[[bench]]
name = "request_lifecycle"
path = "benches/request_lifecycle.rs"
harness = false

[dev-dependencies]
async-trait.workspace = true
axum.workspace = true
criterion.workspace = true
nidus-auth = { path = "crates/nidus-auth" }
nidus-core = { path = "crates/nidus-core" }
nidus-http = { path = "crates/nidus-http" }
nidus-validation = { path = "crates/nidus-validation" }
serde.workspace = true
tokio.workspace = true
tower.workspace = true
validator.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/victorbona/nidus"
homepage = "https://nidus.dev"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
criterion = "0.7"
http = "1"
insta = "1"
nidus-core = { path = "crates/nidus-core" }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
syn = { version = "2", features = ["full"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "trace"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
trybuild = "1"
utoipa = "5"
validator = { version = "0.20", features = ["derive"] }
