[workspace]
members = [
  ".",
  "crates/nidus",
  "crates/nidus-core",
  "crates/nidus-http",
  "crates/nidus-observability",
  "crates/nidus-dashboard",
  "crates/nidus-macros",
  "crates/nidus-config",
  "crates/nidus-openapi",
  "crates/nidus-validation",
  "crates/nidus-auth",
  "crates/nidus-events",
  "crates/nidus-jobs",
  "crates/nidus-sqlx",
  "crates/nidus-cache",
  "crates/nidus-testing",
  "crates/cargo-nidus",
  "examples/hello-world",
  "examples/rest-api",
  "examples/auth-api",
  "examples/openapi",
  "examples/background-jobs",
  "examples/dashboard-api",
  "examples/modular-monolith",
  "examples/realworld-api",
  "examples/production-api",
  "examples/sqlx-app",
  "examples/cache-app",
  "examples/integrations-production",
  "examples/launchpad-api",
]
resolver = "2"

[package]
name = "nidus-workspace"
version.workspace = true
edition.workspace = true
description = "Workspace harness for the Nidus Rust backend framework."
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bench]]
name = "routing"
path = "benches/routing.rs"
harness = false

[[bench]]
name = "dependency_resolution"
path = "benches/dependency_resolution.rs"
harness = false

[[bench]]
name = "request_lifecycle"
path = "benches/request_lifecycle.rs"
harness = false

[[bench]]
name = "event_bus"
path = "benches/event_bus.rs"
harness = false

[dev-dependencies]
async-trait.workspace = true
axum.workspace = true
criterion.workspace = true
nidus-auth = { path = "crates/nidus-auth", version = "1.0.7" }
nidus-core = { path = "crates/nidus-core", version = "1.0.7" }
nidus-events = { path = "crates/nidus-events", version = "1.0.7" }
nidus-http = { path = "crates/nidus-http", version = "1.0.7" }
nidus-validation = { path = "crates/nidus-validation", version = "1.0.7" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
garde.workspace = true

[workspace.package]
version = "1.0.7"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vicotrbb/nidus"
homepage = "https://rustnidus.com/"
rust-version = "1.96"
keywords = ["framework", "axum", "di", "http", "backend"]
categories = ["web-programming::http-server", "asynchronous", "development-tools"]

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
criterion = "0.7"
futures-util = "0.3"
http = "1"
insta = "1"
nidus-core = { path = "crates/nidus-core", version = "1.0.7" }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
syn = { version = "2", features = ["full"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "limit", "trace"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
trybuild = "1"
utoipa = "5"
uuid = { version = "1", features = ["v4"] }
garde = { version = "0.23", features = ["derive", "email"] }
moka = { version = "0.12", features = ["future"] }
