[workspace]
members = [
  ".",
  "crates/nidus",
  "crates/nidus-core",
  "crates/nidus-http",
  "crates/nidus-observability",
  "crates/nidus-opentelemetry",
  "crates/nidus-dashboard",
  "crates/nidus-macros",
  "crates/nidus-config",
  "crates/nidus-openapi",
  "crates/nidus-redis",
  "crates/nidus-validation",
  "crates/nidus-auth",
  "crates/nidus-events",
  "crates/nidus-integrations",
  "crates/nidus-jobs",
  "crates/nidus-jobs-sqlx",
  "crates/nidus-kafka",
  "crates/nidus-nats",
  "crates/nidus-rabbitmq",
  "crates/nidus-sqlx",
  "crates/nidus-sqs",
  "crates/nidus-sentry",
  "crates/nidus-cache",
  "crates/nidus-testing",
  "crates/cargo-nidus",
  "examples/hello-world",
  "examples/rest-api",
  "examples/auth-api",
  "examples/openapi",
  "examples/background-jobs",
  "examples/dashboard-api",
  "examples/modular-monolith",
  "examples/realworld-api",
  "examples/production-api",
  "examples/sqlx-app",
  "examples/cache-app",
  "examples/integrations-production",
  "examples/launchpad-api",
]
resolver = "2"

[package]
name = "nidus-workspace"
version.workspace = true
edition.workspace = true
description = "Workspace harness for the Nidus Rust backend framework."
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bench]]
name = "routing"
path = "benches/routing.rs"
harness = false

[[bench]]
name = "dependency_resolution"
path = "benches/dependency_resolution.rs"
harness = false

[[bench]]
name = "request_lifecycle"
path = "benches/request_lifecycle.rs"
harness = false

[[bench]]
name = "event_bus"
path = "benches/event_bus.rs"
harness = false

[[bench]]
name = "integration_hot_paths"
path = "benches/integration_hot_paths.rs"
harness = false

[dev-dependencies]
async-trait.workspace = true
axum.workspace = true
criterion.workspace = true
nidus = { package = "nidus-rs", path = "crates/nidus", version = "1.0.13", default-features = false, features = ["auth", "http"] }
nidus-auth = { path = "crates/nidus-auth", version = "1.0.13" }
nidus-core = { path = "crates/nidus-core", version = "1.0.13" }
nidus-events = { path = "crates/nidus-events", version = "1.0.13" }
nidus-http = { path = "crates/nidus-http", version = "1.0.13" }
nidus-integrations = { path = "crates/nidus-integrations", version = "1.0.13" }
nidus-jobs = { path = "crates/nidus-jobs", version = "1.0.13" }
nidus-observability = { path = "crates/nidus-observability", version = "1.0.13" }
nidus-openapi = { path = "crates/nidus-openapi", version = "1.0.13" }
nidus-validation = { path = "crates/nidus-validation", version = "1.0.13" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
utoipa.workspace = true
garde.workspace = true

[workspace.package]
version = "1.0.13"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vicotrbb/nidus"
homepage = "https://rustnidus.com/"
rust-version = "1.96"
keywords = ["framework", "axum", "di", "http", "backend"]
categories = ["web-programming::http-server", "asynchronous", "development-tools"]

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
async-nats = { version = "0.49", default-features = false, features = ["jetstream", "ring"] }
aws-config = { version = "1.9", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.103", default-features = false, features = ["default-https-client", "rt-tokio"] }
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
criterion = "0.8"
futures-util = "0.3"
fastrand = "2"
http = "1"
opentelemetry = { version = "0.32", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "grpc-tonic", "http-proto", "reqwest-client", "reqwest-rustls-webpki-roots", "tls-ring", "tls-webpki-roots"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["trace"] }
insta = "1"
nidus-core = { path = "crates/nidus-core", version = "1.0.13" }
nidus-integrations = { path = "crates/nidus-integrations", version = "1.0.13" }
nidus-jobs = { path = "crates/nidus-jobs", version = "1.0.13" }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sentry = { version = "0.48.4", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "release-health", "reqwest", "rustls", "tracing"] }
sentry-tower = { version = "0.48.4", default-features = false, features = ["http", "axum-matched-path"] }
sentry-tracing = { version = "0.48.4", default-features = false, features = ["backtrace"] }
serde_urlencoded = "0.7"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite"] }
syn = { version = "2", features = ["full"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.7", features = ["compression-gzip", "cors", "limit", "trace"] }
tracing = "0.1"
tracing-opentelemetry = { version = "0.33", default-features = false }
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
trybuild = "1"
tonic = { version = "0.14", default-features = false }
utoipa = "5"
uuid = { version = "1", features = ["v4"] }
url = "2"
garde = { version = "0.23", features = ["derive", "email"] }
moka = { version = "0.12", features = ["future"] }
redis = { version = "1.3", default-features = false, features = ["tokio-comp", "connection-manager"] }
lapin = { version = "4.10", default-features = false, features = ["tokio", "rustls", "rustls-platform-verifier", "rustls--ring"] }
rdkafka = { version = "0.39", default-features = false, features = ["tokio", "cmake-build", "tracing"] }
tokio-util = { version = "0.7", features = ["rt"] }
