[package]
name = "cargo-nidus"
version.workspace = true
edition.workspace = true
description = "Command-line project generator and inspection tooling for Nidus applications."
readme = "../../README.md"
documentation = "https://docs.rs/cargo-nidus"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
syn.workspace = true
