[package]
name = "nidus-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
http.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
