[package]
name = "nidus-auth"
version.workspace = true
edition.workspace = true
description = "Guard traits, guard combinators, and Tower guard layers for Nidus HTTP applications."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
http.workspace = true
serde.workspace = true
thiserror.workspace = true
tower.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
