[package]
name = "nidus-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
default = ["moka"]
moka = ["dep:moka"]
health = ["dep:nidus-http"]

[dependencies]
nidus-core = { path = "../nidus-core", version = "0.1.0" }
nidus-http = { path = "../nidus-http", version = "0.1.0", optional = true }
moka = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }
