[package]
name = "nidus-cache"
version.workspace = true
edition.workspace = true
description = "Official cache adapter primitives for Nidus, including Moka-backed cache modules."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["moka"]
moka = ["dep:moka"]
health = ["dep:nidus-http"]

[dependencies]
nidus-core = { path = "../nidus-core", version = "1.0.0" }
nidus-http = { path = "../nidus-http", version = "1.0.0", optional = true }
moka = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }
