[package]
name = "nidus-cache"
version.workspace = true
edition.workspace = true
description = "Official cache adapter primitives for Nidus, including Moka-backed cache modules."
readme = "../../README.md"
documentation = "https://docs.rs/nidus-cache"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["moka"]
moka = ["dep:moka"]
health = ["dep:nidus-http"]
observability = ["dep:nidus-observability"]

[dependencies]
nidus-core = { path = "../nidus-core", version = "1.0.5" }
nidus-http = { path = "../nidus-http", version = "1.0.5", optional = true }
nidus-observability = { path = "../nidus-observability", version = "1.0.5", optional = true }
moka = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }
