[package]
name = "nidus-config"
version.workspace = true
edition.workspace = true
description = "Typed configuration values and environment loading utilities for Nidus applications."
readme = "../../README.md"
documentation = "https://docs.rs/nidus-config"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde.workspace = true
