[package]
name = "nidus-core"
version.workspace = true
edition.workspace = true
description = "Core Nidus dependency injection, modules, provider lifetimes, and application lifecycle."
readme = "../../README.md"
documentation = "https://docs.rs/nidus-core"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-core.workspace = true
tracing-subscriber.workspace = true
