[package]
name = "nidus-dashboard"
version.workspace = true
edition.workspace = true
description = "Embedded dashboard for Nidus applications."
documentation = "https://docs.rs/nidus-dashboard"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["sqlite", "embedded-assets"]
sqlite = ["dep:sqlx"]
embedded-assets = []

[dependencies]
axum.workspace = true
futures-util.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true
