[package]
name = "nidus-events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tracing-core.workspace = true
tracing-subscriber.workspace = true
