[package]
name = "nidus-http"
version.workspace = true
edition.workspace = true
description = "Axum and Tower HTTP integration, controllers, middleware, health, metrics, and server defaults for Nidus."
readme = "../../README.md"
documentation = "https://docs.rs/nidus-http"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
otel = []

[dependencies]
axum.workspace = true
futures-util.workspace = true
http.workspace = true
nidus-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["io-util"] }
tracing-core.workspace = true
