[package]
name = "nidus-jobs"
version.workspace = true
edition.workspace = true
description = "Synchronous and asynchronous job queues with observed job runner support for Nidus."
readme = "../../README.md"
documentation = "https://docs.rs/nidus-jobs"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
fastrand.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
