[package]
name = "nidus-kafka"
version.workspace = true
edition.workspace = true
description = "First-party Apache Kafka adapter for Nidus built on rust-rdkafka."
readme = "../../README.md"
documentation = "https://docs.rs/nidus-kafka"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["tls"]
tls = ["rdkafka/ssl-vendored"]
health = ["dep:nidus-http"]
observability = ["nidus-integrations/observability"]
dashboard = ["nidus-integrations/dashboard"]

[dependencies]
async-trait.workspace = true
nidus-core.workspace = true
nidus-http = { path = "../nidus-http", version = "1.0.10", optional = true }
nidus-integrations.workspace = true
rdkafka.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
futures-util.workspace = true
serde_json.workspace = true
uuid.workspace = true
