[package]
name = "nidus-macros"
version.workspace = true
edition.workspace = true
description = "Proc macros for Nidus controllers, routes, modules, providers, guards, pipes, and entrypoints."
readme = "../../README.md"
documentation = "https://docs.rs/nidus-macros"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
insta.workspace = true
