[package]
name = "nidus-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
nidus-http = { path = "../nidus-http" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
utoipa.workspace = true

[dev-dependencies]
http.workspace = true
nidus-testing = { path = "../nidus-testing" }
tokio.workspace = true
