[package]
name = "nidus-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
nidus-http = { path = "../nidus-http", version = "0.1.0" }
serde_json.workspace = true
thiserror.workspace = true
utoipa.workspace = true

[dev-dependencies]
http.workspace = true
nidus-testing = { path = "../nidus-testing", version = "0.1.0" }
tokio.workspace = true
