[package]
name = "nidus-openapi"
version.workspace = true
edition.workspace = true
description = "OpenAPI route metadata collection and document rendering helpers for Nidus applications."
readme = "../../README.md"
documentation = "https://docs.rs/nidus-openapi"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
axum.workspace = true
nidus-http = { path = "../nidus-http", version = "1.0.3" }
serde_json.workspace = true
thiserror.workspace = true
utoipa.workspace = true

[dev-dependencies]
http.workspace = true
nidus-testing = { path = "../nidus-testing", version = "1.0.3" }
tokio.workspace = true
