[package]
name = "nidus-sqlx"
version.workspace = true
edition.workspace = true
description = "Official SQLx adapter primitives for Nidus, including pool registration and health checks."
readme = "../../README.md"
documentation = "https://docs.rs/nidus-sqlx"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
nidus-config = ["dep:nidus-config"]
health = ["dep:nidus-http"]
observability = ["dep:nidus-observability"]

[dependencies]
nidus-core = { path = "../nidus-core", version = "1.0.7" }
nidus-config = { path = "../nidus-config", version = "1.0.7", optional = true }
nidus-http = { path = "../nidus-http", version = "1.0.7", optional = true }
nidus-observability = { path = "../nidus-observability", version = "1.0.7", optional = true }
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
nidus-config = { path = "../nidus-config", version = "1.0.7" }
tokio = { workspace = true, features = ["time"] }
trybuild.workspace = true
